--- a/frontweb/src/components/SalesSummary/styles.css
+++ b/frontweb/src/components/SalesSummary/styles.css
@@ -1,3 +1,8 @@
+.sales-summary-container {
+  /* border: 1px solid red; */
+  width: 100%;
+}
+
 .sales-summary-value {
   margin: 0;
   color: var(--text-color);
