--- a/frontweb/src/components/Filter/styles.css
+++ b/frontweb/src/components/Filter/styles.css
@@ -19,6 +19,18 @@
   border-radius: 5px !important;
 }
 
+/* .filter-input {
+  color: blue;
+} */
+
+.filter-input__menu-list {
+  color: var(--text-grey-color) !important;
+}
+
+.filter-input__indicator-separator {
+  display: none;
+}
+
 @media (min-width: 576px) {
   .filter-container {
     padding-left: 40px;
